--- a/main-top.html
+++ b/main-top.html
@@ -175,7 +175,7 @@
           <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
       </div>
       <div class="footer-media-logo-container">
-      <img class="footer-media-logo" src="src/logo-media-bottom.png" style="height: 20vh; width: 23vw;">
+      <img class="footer-media-logo" src="src/logo-media-bottom.png"">
       </div>
   </footer>
 
