--- a/greatones.html
+++ b/greatones.html
@@ -118,33 +118,38 @@
       <h1>직원 소개</h1>
       <div class="greatones-members">
         <div class="greatones">
-          <img src="src/bonobono.jpg" alt="오너" />
+          <img src="src/juyeon.jpg" alt="Project Owner" />
           <h2>정주연</h2>
           <div class="greatones-text-box">
             <p>직위: Project Owner</p>
-            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <p>취미: 사진, 전기자전거 타기</p>
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
-                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
-                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+                반갑습니다! FE 개발자 정주연입니다:-) <br />
+                여기까지 오신 모든 분들, 매일이 행복하고 평탄한 나날들이었으면
+                좋겠습니다! 앞으로도 잘 부탁드립니다!
               </p>
             </div>
+            <a
+              class="greatones-introduce-link"
+              href="https://github.com/BomEllen"
+              >https://github.com/BomEllen</a
+            >
           </div>
         </div>
         <div class="greatones">
-          <img src="src/bonobono.jpg" alt="오너" />
+          <img src="src/jjaney-profile.jpg" alt="Developer" />
           <h2>장해명</h2>
           <div class="greatones-text-box">
-            <p>직위: Project Owner</p>
-            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <p>직위: Developer</p>
+            <p>취미: 베이킹, 넷플릭스, 자전거 타기, 코딩 ..?</p>
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
-                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
-                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+                새로운 것을 배우는 걸 좋아하며, 좋은 사용자 경험을 제공하는
+                프론트 개발자가 되고 싶습니다.<br />
+                2주 간의 코알누 스터디 정말 즐거웠습니다 🧡
               </p>
             </div>
           </div>
@@ -192,12 +197,15 @@
               <p>
                 나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
                 찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
-                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
-                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
-                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
-                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다. 나보다 더
+                바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를 찾으려
+                하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다 나보다
+                한 발 먼저 다녀간 시인이 있음을 발견한다.
               </p>
             </div>
+            <a class="greatones-introduce-link" href="https://andrebono.com"
+              >https://andrebono.com</a
+            >
           </div>
         </div>
       </div>
@@ -244,7 +252,6 @@
           <img
             class="footer-media-logo"
             src="src/logo-media-bottom.png"
-            style="height: 20vh; width: 23vw"
           />
         </div>
       </div>
