--- a/greatones.html
+++ b/greatones.html
@@ -133,7 +133,7 @@
             </div>
             <a
               class="greatones-introduce-link"
-              href="https://github.com/BomEllen"
+              href="https://github.com/BomEllen" target="_blank" rel="noopener noreferrer"
               >https://github.com/BomEllen</a
             >
           </div>
@@ -203,7 +203,7 @@
                 한 발 먼저 다녀간 시인이 있음을 발견한다.
               </p>
             </div>
-            <a class="greatones-introduce-link" href="https://andrebono.com"
+            <a class="greatones-introduce-link" href="https://andrebono.com" target="_blank" rel="noopener noreferrer"
               >https://andrebono.com</a
             >
           </div>
