--- a/greatones.html
+++ b/greatones.html
@@ -190,7 +190,7 @@
           <img src="src/bonobono.jpg" alt="매우 훌륭한 철학자" />
           <h2>한승완</h2>
           <div class="greatones-text-box">
-            <p>직위: 매우 훌륭한 철학자</p>
+            <p>직위: Scrum Master</p>
             <p>취미: 밥먹고 되새김질</p>
             <div class="greatones-introduce">
               <p>소개:</p>
