--- a/greatones.html
+++ b/greatones.html
@@ -158,7 +158,7 @@
           <img src="src/pigeon.jpg" alt="Developer" />
           <h2>이소영</h2>
           <div class="greatones-text-box">
-            <p>직위: Developerr</p>
+            <p>직위: Developer</p>
             <p>취미:  넷플릭스, 예쁜 카페 찾아가기, 엄마랑 주말 나들이</p>
             <div class="greatones-introduce">
               <p>소개:</p>
@@ -169,17 +169,15 @@
           </div>
         </div>
         <div class="greatones">
-          <img src="src/bonobono.jpg" alt="오너" />
+          <img src="src/min.jpg" alt="Developer" />
           <h2>나정민</h2>
           <div class="greatones-text-box">
-            <p>직위: Project Owner</p>
+            <p>직위: Developer</p>
             <p>취미: 코딩알려주는 누나 유투브 감상</p>
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
-                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
-                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+                몸을 조각하던 헬스 트레이너에서, 이제는 웹사이트를 조각하는 개발자로 변신합니다. 탄탄한 코드로 디지털 세상을 빌드해 나가겠습니다.
               </p>
             </div>
           </div>
