--- a/greatones.html
+++ b/greatones.html
@@ -173,7 +173,7 @@
           <h2>나정민</h2>
           <div class="greatones-text-box">
             <p>직위: Developer</p>
-            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <p>취미: 크로스핏, 요리</p>
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
