--- a/greatones.html
+++ b/greatones.html
@@ -147,7 +147,7 @@
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                새로운 것을 배우는 걸 좋아하며, 좋은 사용자 경험을 제공하는
+                새로운 것을 배우는 걸 좋아하며,<br>좋은 사용자 경험을 제공하는<br>
                 프론트 개발자가 되고 싶습니다.<br />
                 2주 간의 코알누 스터디 정말 즐거웠습니다 🧡
               </p>
