--- a/greatones.html
+++ b/greatones.html
@@ -128,7 +128,7 @@
               <p>
                 반갑습니다! FE 개발자 정주연입니다:-) <br />
                 여기까지 오신 모든 분들, 매일이 행복하고 평탄한 나날들이었으면
-                좋겠습니다! 앞으로도 잘 부탁드립니다!
+                좋겠습니다!<br>앞으로도 잘 부탁드립니다!
               </p>
             </div>
             <a
@@ -177,7 +177,7 @@
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                몸을 조각하던 헬스 트레이너에서, 이제는 웹사이트를 조각하는 개발자로 변신합니다. 탄탄한 코드로 디지털 세상을 빌드해 나가겠습니다.
+                몸을 조각하던 헬스 트레이너에서, 이제는 웹사이트를 조각하는 개발자로 변신합니다. 탄탄한 코드로 디지털 세상을<br>빌드해 나가겠습니다.
               </p>
             </div>
           </div>
