--- a/greatones.html
+++ b/greatones.html
@@ -177,7 +177,7 @@
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                몸을 조각하던 헬스 트레이너에서, 이제는 웹사이트를 조각하는 개발자로 변신합니다.<br>탄탄한 코드로 디지털 세상을 빌드해 나가겠습니다.
+                몸을 조각하던 헬스 트레이너에서, 이제는 웹사이트를 조각하는 개발자로 변신합니다.<br>탄탄한 코드로<br>디지털 세상을 빌드해 나가겠습니다.
               </p>
             </div>
           </div>
