--- a/greatones.html
+++ b/greatones.html
@@ -191,12 +191,7 @@
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
-                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
-                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다. 나보다 더
-                바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를 찾으려
-                하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다 나보다
-                한 발 먼저 다녀간 시인이 있음을 발견한다.
+                매우 훌륭한 철학자 앙드레 보노입니다.
               </p>
             </div>
             <a class="greatones-introduce-link" href="https://andrebono.com" target="_blank" rel="noopener noreferrer"
