--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MENU</title>
+    <title>눈나커피</title>
     <link rel="shortcut icon" href="./src/favicon.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/2c827c8cca.js"
