--- a/greatones.html
+++ b/greatones.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GREATONES</title>
+    <title>눈나커피</title>
     <link rel="shortcut icon" href="./src/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
