--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         </div>
         <div class="nav-menu">
           <a href="about.html" class="nav-menu-link">
-            <h3 class="nav-menu-text">ABOUT</h3>
+            <h3 class="nav-menu-text" style="color: #5da0d8;">ABOUT</h3>
           </a>
           <a href="menu.html" class="nav-menu-link">
             <h3 class="nav-menu-text">MENU</h3>
