--- a/community.html
+++ b/community.html
@@ -43,7 +43,7 @@
             <h3 class="nav-menu-text">MENU</h3>
           </a>
           <a href="community.html" class="nav-menu-link">
-            <h3 class="nav-menu-text">COMMUNITY</h3>
+            <h3 class="nav-menu-text" style="color: #5da0d8;">COMMUNITY</h3>
           </a>
           <a href="greatones.html" class="nav-menu-link">
             <h3 class="nav-menu-text">GREATONES</h3>
