--- a/menu.html
+++ b/menu.html
@@ -90,7 +90,7 @@
               <h3 class="nav-menu-text">ABOUT</h3>
             </a>
             <a href="menu.html" class="nav-menu-link">
-              <h3 class="nav-menu-text">MENU</h3>
+              <h3 class="nav-menu-text" style="color: #5da0d8;">MENU</h3>
             </a>
             <a href="community.html" class="nav-menu-link">
               <h3 class="nav-menu-text">COMMUNITY</h3>
